...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_NestedScrolView"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_CreateReunion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CreateViewActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Nom_Reunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:hint="@string/Name_of_reunion"
...
            android:minWidth="@dimen/min_width_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_Nom_Reunion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/max_width_text"
                android:minHeight="@dimen/min_height_text"

                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between"
            android:hint="@string/date"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Nom_Reunion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_Nom_Reunion"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Nom_Reunion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_Date"
                android:layout_width="match_parent"
                android:maxWidth="@dimen/max_width_text"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_text"

                android:drawableEnd="@drawable/baseline_calendar_today_24"
                android:focusable="false"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Duree_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between"
            android:layout_marginEnd="@dimen/margin_Duree"
            android:hint="@string/duree_start"
            app:layout_constraintEnd_toStartOf="@+id/outlinedTextField_Duree_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_Date"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_Duree_start"
                android:layout_width="match_parent"
                android:maxWidth="@dimen/max_width_text"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_text"

                android:drawableEnd="@drawable/baseline_access_time_24"
...
            android:hint="@string/duree_end"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Date"
            app:layout_constraintStart_toEndOf="@+id/outlinedTextField_Duree_start"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_Duree_end"
                android:layout_width="match_parent"
                android:maxWidth="@dimen/max_width_text"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_text"

                android:drawableEnd="@drawable/baseline_access_time_24"
...
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Salle_Reunion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between"
            android:hint="@string/salle_of_reunion"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Date"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_Date"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Duree_start"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoComplete_Salle_Reunion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionautoComplete_Salle_Reunion"
                android:inputType="none"
                android:maxWidth="@dimen/max_width_text"
                android:minHeight="@dimen/min_height_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_Email"
            android:layout_width="0dp"
            android:maxWidth="@dimen/max_width_text"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between"
            android:hint="@string/Participant"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Salle_Reunion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_Salle_Reunion"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Salle_Reunion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInput_Email"
                android:layout_width="match_parent"
                android:maxWidth="@dimen/max_width_text"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height_text"
                android:drawableEnd="@drawable/baseline_send_24"
                android:singleLine="true" />
...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Email"
            app:layout_constraintStart_toStartOf="@+id/outlinedTextField_Email"
            app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_Email" />

        <Button
            android:id="@+id/button_CreateReunion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttom_maging_top"
            android:text="@string/Create_Reunion"
            android:contentDescription="@string/Create_Reunion"
            app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_Email"
...
