...
    <string name="Name_of_reunion">Nom de la reunion</string>
    <string name="date">Date</string>
    <string name="duree_start">Début</string>
    <string name="duree_end">Fin</string>
    <string name="salle_of_reunion">Salle de reunion</string>
    <string name="Participant">Participant</string>
    <string name="Create_Reunion">Créer la Reunion</string>
    <string name="Add_Reunion">Ajoute une Réunion</string>
    <string name="Error_Name_of_Reunion">entrez un nom de reunion</string>
    <string name="descriptionautoComplete_Salle_Reunion">liste de reunion a choisir</string>
    <string name="delete">supprimer la réunion</string>
    <!-- item menu (menu.XML)-->
    <string name="Filter_by_date">Filtrer par date</string>
    <string name="Filter_by_Venue">Filtrer par lieu</string>
    <string name="Filter_reset">Reset du filtre </string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
...
