...
            android:src="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_list_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_list_name"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/item_list_circle"
...
